--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="dist/index.css">
     <title>Live Streaming</title>
 </head>
+
 <body>
     <header class="header" aria-label="header">
         <div class="container">
@@ -20,10 +23,10 @@
 
                 <div class="nav__links">
                     <ul class="nav__links-list list" aria-label="header nav links">
-                        <li class="list__item" aria-label="first link">
+                        <li class="list__item">
                             <a href="#" class="list__item-link">about</a>
                         </li>
-                        <li class="list__item" aria-label="second link">
+                        <li class="list__item">
                             <a href="#" class="list__item-link">contact</a>
                         </li>
                     </ul>
@@ -43,5 +46,33 @@
             </nav>
         </div>
     </header>
+
+    <main aria-label="main content">
+        <section class="hero-section" aria-label="hero section">
+            <div class="container">
+                <div class="hero">
+                    <div class="hero__content">
+                        <h1 class="hero__title">WHEN PERFORMANCE MATTERS</h1>
+                        <button class="hero__action-btn">Start development with us!</button>
+                    </div>
+
+                    <div class="hero__notify">
+                        <img src="assets/img/pigeon_alpha.png" alt="pigeon img" class="hero__notify-img">
+                        <p class="hero__notify-content">
+                            WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
+                            THROUGH YOUR CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE.
+                            FOR MORE INFORMATION, PLEASE SEE OUR PRIVACY POLICY.
+                        </p>
+                        <button class="hero__notify-btn">accept</button>
+                    </div>
+
+                    <div class="hero__scroll">
+                        <span class="hero__scroll-content">
+                            Scroll down
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
-</html>
