--- a/index.html
+++ b/index.html
@@ -74,5 +74,75 @@
                 </div>
             </div>
         </section>
+
+        <section class="work-section">
+            <div class="container">
+                <div class="work">
+                    <h2 class="work__title">How we work</h2>
+
+                    <div class="work__cards-wrapper">
+                        <figure class="info-card card--analysis" aria-label="card analysis">
+                            <svg class="info-card__icon icon--bulb" aria-label="bulb icon">
+                                <use href="assets/sprites.svg#bulb-icon"></use>
+                            </svg>
+                            <h3 class="info-card__title">Analysis</h3>
+                            <p class="info-card__desc">
+                                Gathering client's ideas we are happy to help with a technical vision.
+                            </p>
+                        </figure>
+
+                        <figure class="info-card card--design" aria-label="card design">
+                            <svg class="info-card__icon icon--design" aria-label="design icon">
+                                <use href="assets/sprites.svg#design-icon"></use>
+                            </svg>
+                            <h3 class="info-card__title">Design</h3>
+                            <p class="info-card__desc">
+                                In-depth analysis makes our solutions flexible, scalable and robust.
+                            </p>
+                        </figure>
+
+                        <figure class="info-card card--dev" aria-label="card dev">
+                            <svg class="info-card__icon icon--dev" aria-label="dev icon">
+                                <use href="assets/sprites.svg#dev-icon"></use>
+                            </svg>
+                            <h3 class="info-card__title">Development</h3>
+                            <p class="info-card__desc">
+                                Using best practices to make reliable, well-documented and easy to maintain system.
+                            </p>
+                        </figure>
+
+                        <figure class="info-card card--maintenance" aria-label="maintenance dev">
+                            <svg class="info-card__icon icon--maintenance" aria-label="maintenance icon">
+                                <use href="assets/sprites.svg#maintenance-icon"></use>
+                            </svg>
+                            <h3 class="info-card__title">Maintenance</h3>
+                            <p class="info-card__desc">
+                                Gathering client's ideas we are happy to help with a technical vision.
+                            </p>
+                        </figure>
+
+                        <figure class="info-card card--testing" aria-label="testing dev">
+                            <svg class="info-card__icon icon--testing" aria-label="testing icon">
+                                <use href="assets/sprites.svg#testing-icon"></use>
+                            </svg>
+                            <h3 class="info-card__title">Testing</h3>
+                            <p class="info-card__desc">
+                                Providing best quality of things developed by us for customers
+                            </p>
+                        </figure>
+
+                        <figure class="info-card card--integration" aria-label="integration dev">
+                            <svg class="info-card__icon icon--integration" aria-label="integration icon">
+                                <use href="assets/sprites.svg#integration-icon"></use>
+                            </svg>
+                            <h3 class="info-card__title">Integration</h3>
+                            <p class="info-card__desc">
+                                Solutions that go with the times to improve businesses and give customers best experience
+                            </p>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
