experience section implementation

--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                             </svg>
                             <h3 class="info-card__title">Integration</h3>
                             <p class="info-card__desc">
-                                Solutions that go with the times to improve businesses and give customers best experience
+                                Solutions that go with the times to improve businesses and give customers best
+                                experience
                             </p>
                         </figure>
                     </div>
@@ -177,6 +178,54 @@
                     </div>
 
                 </div>
+            </div>
+        </section>
+
+        <hr class="divider">
+
+        <section class="experience-section" aria-label="experience section">
+            <div class="container">
+                <section class="experience">
+                    <h2 class="experience__title">Our experience</h2>
+
+                    <div class="experience__cards-wrapper">
+
+                        <figure class="img-card">
+                            <h3 class="img-card__title">Serverless Live Streaming</h3>
+                            <img src="assets/img/card_shooting.webp" alt="card_shooting img" class="img-card__preview">
+                            <button class="img-card__btn">
+                                <svg class="img-card__btn-icon" aria-label="arrow icon">
+                                    <use href="assets/sprites.svg#arrow-icon"></use>
+                                </svg>
+                            </button>
+                        </figure>
+
+                        <figure class="img-card">
+                            <h3 class="img-card__title">
+                                <span>Learn about CloudFlex</span>
+                                <span>team cases</span></h3>
+                            <img src="assets/img/card_working.webp" alt="card_working img" class="img-card__preview">
+                            <button class="img-card__btn">
+                                <svg class="img-card__btn-icon" aria-label="arrow icon">
+                                    <use href="assets/sprites.svg#arrow-icon"></use>
+                                </svg>
+                            </button>
+                        </figure>
+
+                        <figure class="img-card">
+                            <h3 class="img-card__title">
+                                Live streaming from mobile
+                            </h3>
+                            <img src="assets/img/card_streaming.webp" alt="card_streaming img" class="img-card__preview">
+                            <button class="img-card__btn">
+                                <svg class="img-card__btn-icon" aria-label="arrow icon">
+                                    <use href="assets/sprites.svg#arrow-icon"></use>
+                                </svg>
+                            </button>
+                        </figure>
+
+                    </div>
+                </section>
             </div>
         </section>
     </main>
