--- a/index.html
+++ b/index.html
@@ -229,6 +229,48 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="testimonials-section" aria-label="testimonials section" id="testimonials">
+            <div class="container">
+                <div class="testimonials">
+                    <h2 class="testimonials__title">
+                        Testimonials
+                    </h2>
+
+                    <div class="testimonials__slider slider">
+                        <figure class="wave-card">
+                            <img src="assets/img/avatar_alpha.png" alt="" class="wave-card__avatar">
+
+                            <blockquote class="wave-card__quote" cite="https://happyclient.com">
+                                <p>
+                                    Очень хороший отзыв, который оставил довольный клиент. А тут я ещё не придумал что
+                                    написать, поэтому просто добавил это предложение.
+                                </p>
+                            </blockquote>
+                        </figure>
+
+                        <button class="slider__left-btn">
+                            <svg class="slider__left-btn-icon" aria-label="arrow icon">
+                                <use href="assets/sprites.svg#arrow-icon"></use>
+                            </svg>
+                        </button>
+
+                        <button class="slider__right-btn">
+                            <svg class="slider__right-btn-icon" aria-label="arrow icon">
+                                <use href="assets/sprites.svg#arrow-icon"></use>
+                            </svg>
+                        </button>
+
+                        <div class="slider__points">
+                            <div class="slider__points-item"></div>
+                            <div class="slider__points-item"></div>
+                            <div class="slider__points-item"></div>
+                            <div class="slider__points-item"></div>
+                            <div class="slider__points-item"></div>
+                            <div class="slider__points-item"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
