--- a/index.html
+++ b/index.html
@@ -272,5 +272,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="form-section" aria-label="form section">
+            <div class="container">
+                <div class="form-section__wrapper">
+                    <form action="mailto:streaming_company@mail.ru" class="form" aria-labelledby="form-title">
+                        <label for="input-name" id="form-title" class="form__title">Ready to get started? Drop us a line!</label>
+                        <input id="input-name" type="text" placeholder="Name" class="form__name" aria-required="true" required name="firstName" autocomplete="name">
+                        <input id="input-email" type="email" placeholder="Email" class="form__email" aria-required="true" name="email" required>
+                        <input id="input-text" type="text" placeholder="What we can do for you?" class="form__text" aria-required="true" name="question" required autocomplete="off">
+
+                        <button type="submit" class="form__submit-btn">Send</button>
+                    </form>
+                </div>
+
+            </div>
+                <div class="form-section__bg-cloud cloud--left"></div>
+                <div class="form-section__bg-cloud cloud--right"></div>
+        </section>
     </main>
 </body>
