--- a/index.html
+++ b/index.html
@@ -291,4 +291,41 @@
                 <div class="form-section__bg-cloud cloud--right"></div>
         </section>
     </main>
+
+    <footer class="footer-section" aria-label="contacts section">
+        <div class="container">
+            <div class="footer">
+                <div class="footer__terms">
+                    <div class="footer__terms-links">
+                        <a href="#" class="footer__terms-link">
+                            Terms of Use
+                        </a>
+                        <a href="#" class="footer__terms-link">
+                            Privacy Policy
+                        </a>
+                    </div>
+
+                    <div class="footer__terms-rights">© CloudFlex 2019. All Rights Reserved.</div>
+                </div>
+
+                <address class="footer__contacts">
+                    <a href="https://linkedin.com" target="_blank">
+                        <svg class="footer__contacts-icon" aria-label="linkedin icon">
+                            <use href="assets/sprites.svg#linkedin-icon"></use>
+                        </svg>
+                    </a>
+                    <a href="https://facebook.com" target="_blank">
+                        <svg class="footer__contacts-icon" aria-label="facebook icon">
+                            <use href="assets/sprites.svg#facebook-icon"></use>
+                        </svg>
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <svg class="footer__contacts-icon" aria-label="instagram icon">
+                            <use href="assets/sprites.svg#instagram-icon"></use>
+                        </svg>
+                    </a>
+                </address>
+            </div>
+        </div>
+    </footer>
 </body>
