--- a/index.html
+++ b/index.html
@@ -47,6 +47,45 @@
         </div>
     </header>
 
+    <div class="mobile-navigation">
+        <label for="checkboxID" class="mobile-navigation__burger">
+            <svg class="mobile-navigation__burger-icon" aria-label="burger icon">
+                <use href="assets/sprites.svg#burger-icon"></use>
+            </svg>
+        </label>
+
+        <input id="checkboxID" type="checkbox" class="mobile-navigation__toggler">
+
+        <nav class="mobile-navigation__menu nav">
+            <ul class="nav__list">
+                <li class="nav__list-item">
+                    <a href="#work" class="nav__list-item-link">How we work</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#about" class="nav__list-item-link">About us</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#experience" class="nav__list-item-link">Our experience</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#testimonials" class="nav__list-item-link">Testimonials</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#formSection" class="nav__list-item-link">Form</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#contacts" class="nav__list-item-link">Contacts</a>
+                </li>
+            </ul>
+
+            <label for="checkboxID" class="nav__close">
+                <svg class="nav__close-icon" aria-label="close icon">
+                    <use href="assets/sprites.svg#cross-icon"></use>
+                </svg>
+            </label>
+        </nav>
+    </div>
+
     <main aria-label="main content">
         <section class="hero-section" aria-label="hero section">
             <div class="container">
@@ -75,14 +114,14 @@
             </div>
         </section>
 
-        <section class="work-section">
+        <section class="work-section" id="work">
             <div class="container">
                 <div class="work">
                     <h2 class="work__title">How we work</h2>
 
                     <div class="work__cards-wrapper">
                         <figure class="info-card card--analysis" aria-label="card analysis">
-                            <svg class="info-card__icon icon--bulb" aria-label="bulb icon">
+                            <svg class="info-card__icon icon--bulb" aria-label="bulb img">
                                 <use href="assets/sprites.svg#bulb-icon"></use>
                             </svg>
                             <h3 class="info-card__title">Analysis</h3>
@@ -92,7 +131,7 @@
                         </figure>
 
                         <figure class="info-card card--design" aria-label="card design">
-                            <svg class="info-card__icon icon--design" aria-label="design icon">
+                            <svg class="info-card__icon icon--design" aria-label="design img">
                                 <use href="assets/sprites.svg#design-icon"></use>
                             </svg>
                             <h3 class="info-card__title">Design</h3>
@@ -101,8 +140,8 @@
                             </p>
                         </figure>
 
-                        <figure class="info-card card--dev" aria-label="card dev">
-                            <svg class="info-card__icon icon--dev" aria-label="dev icon">
+                        <figure class="info-card card--dev" aria-label="dev card">
+                            <svg class="info-card__icon icon--dev" aria-label="dev img">
                                 <use href="assets/sprites.svg#dev-icon"></use>
                             </svg>
                             <h3 class="info-card__title">Development</h3>
@@ -111,34 +150,34 @@
                             </p>
                         </figure>
 
-                        <figure class="info-card card--maintenance" aria-label="maintenance dev">
-                            <svg class="info-card__icon icon--maintenance" aria-label="maintenance icon">
+                        <figure class="info-card card--maintenance" aria-label="maintenance card">
+                            <svg class="info-card__icon icon--maintenance" aria-label="maintenance img">
                                 <use href="assets/sprites.svg#maintenance-icon"></use>
                             </svg>
                             <h3 class="info-card__title">Maintenance</h3>
                             <p class="info-card__desc">
-                                Gathering client's ideas we are happy to help with a technical vision.
+                                Using best practices to make reliable, well-documented and easy to maintain system.
                             </p>
                         </figure>
 
-                        <figure class="info-card card--testing" aria-label="testing dev">
-                            <svg class="info-card__icon icon--testing" aria-label="testing icon">
+                        <figure class="info-card card--testing" aria-label="testing card">
+                            <svg class="info-card__icon icon--testing" aria-label="testing img">
                                 <use href="assets/sprites.svg#testing-icon"></use>
                             </svg>
                             <h3 class="info-card__title">Testing</h3>
                             <p class="info-card__desc">
-                                Providing best quality of things developed by us for customers
+                                Providing best quality of things developed by us for customers.
                             </p>
                         </figure>
 
-                        <figure class="info-card card--integration" aria-label="integration dev">
-                            <svg class="info-card__icon icon--integration" aria-label="integration icon">
+                        <figure class="info-card card--integration" aria-label="integration card">
+                            <svg class="info-card__icon icon--integration" aria-label="integration img">
                                 <use href="assets/sprites.svg#integration-icon"></use>
                             </svg>
                             <h3 class="info-card__title">Integration</h3>
                             <p class="info-card__desc">
                                 Solutions that go with the times to improve businesses and give customers best
-                                experience
+                                experience.
                             </p>
                         </figure>
                     </div>
@@ -148,7 +187,7 @@
 
         <hr class="divider">
 
-        <section class="about-section">
+        <section class="about-section" id="about">
             <div class="container">
                 <div class="about">
                     <div class="about__quality">
@@ -173,23 +212,19 @@
                         <h3 class="about__approach-title">Individual Approach</h3>
                         <p class="about__approach-desc">
                             Our company works according to the principle of individual approach to every client.
-                            This method lets us to get success in problems of all levels.
+                            <br>This method lets us to get success in problems of all levels.
                         </p>
                     </div>
-
                 </div>
             </div>
         </section>
 
-        <hr class="divider">
-
-        <section class="experience-section" aria-label="experience section">
+        <section class="experience-section" aria-label="experience section" id="experience">
             <div class="container">
-                <section class="experience">
+                <div class="experience">
                     <h2 class="experience__title">Our experience</h2>
 
                     <div class="experience__cards-wrapper">
-
                         <figure class="img-card">
                             <h3 class="img-card__title">Serverless Live Streaming</h3>
                             <img src="assets/img/card_shooting.webp" alt="card_shooting img" class="img-card__preview">
@@ -203,7 +238,8 @@
                         <figure class="img-card">
                             <h3 class="img-card__title">
                                 <span>Learn about CloudFlex</span>
-                                <span>team cases</span></h3>
+                                <span>team cases</span>
+                            </h3>
                             <img src="assets/img/card_working.webp" alt="card_working img" class="img-card__preview">
                             <button class="img-card__btn">
                                 <svg class="img-card__btn-icon" aria-label="arrow icon">
@@ -213,19 +249,17 @@
                         </figure>
 
                         <figure class="img-card">
-                            <h3 class="img-card__title">
-                                Live streaming from mobile
-                            </h3>
-                            <img src="assets/img/card_streaming.webp" alt="card_streaming img" class="img-card__preview">
+                            <h3 class="img-card__title">Serverless Live Streaming</h3>
+                            <img src="assets/img/card_streaming.webp" alt="card_streaming img"
+                                class="img-card__preview">
                             <button class="img-card__btn">
                                 <svg class="img-card__btn-icon" aria-label="arrow icon">
                                     <use href="assets/sprites.svg#arrow-icon"></use>
                                 </svg>
                             </button>
                         </figure>
-
                     </div>
-                </section>
+                </div>
             </div>
         </section>
 
@@ -273,26 +307,30 @@
             </div>
         </section>
 
-        <section class="form-section" aria-label="form section">
+        <section class="form-section" aria-label="form section" id="formSection">
             <div class="container">
                 <div class="form-section__wrapper">
-                    <form action="mailto:streaming_company@mail.ru" class="form" aria-labelledby="form-title">
-                        <label for="input-name" id="form-title" class="form__title">Ready to get started? Drop us a line!</label>
-                        <input id="input-name" type="text" placeholder="Name" class="form__name" aria-required="true" required name="firstName" autocomplete="name">
-                        <input id="input-email" type="email" placeholder="Email" class="form__email" aria-required="true" name="email" required>
-                        <input id="input-text" type="text" placeholder="What we can do for you?" class="form__text" aria-required="true" name="question" required autocomplete="off">
+                    <form action="mailto:streaming_compony@mail.ru" class="form" aria-labelledby="form-title">
+                        <label for="input-name" id="form-title" class="form__title">Ready to get started? Drop us a
+                            line!</label>
+                        <input id="input-name" type="text" placeholder="Name" class="form__name" name="firstName"
+                            aria-required="true" required autocomplete="name">
+                        <input id="input-email" type="email" placeholder="Email" class="form__email" name="email"
+                            aria-required="true" required autocomplete="off">
+                        <input id="input-text" type="text" placeholder="What we can do for you?" class="form__text"
+                            name="question" aria-required="true" required>
 
                         <button type="submit" class="form__submit-btn">Send</button>
                     </form>
                 </div>
-
             </div>
-                <div class="form-section__bg-cloud cloud--left"></div>
-                <div class="form-section__bg-cloud cloud--right"></div>
+
+            <div class="form-section__bg-cloud cloud--left"></div>
+            <div class="form-section__bg-cloud cloud--right"></div>
         </section>
     </main>
 
-    <footer class="footer-section" aria-label="contacts section">
+    <footer class="footer-section" aria-label="contacts section" id="contacts">
         <div class="container">
             <div class="footer">
                 <div class="footer__terms">
@@ -305,7 +343,7 @@
                         </a>
                     </div>
 
-                    <div class="footer__terms-rights">© CloudFlex 2019. All Rights Reserved.</div>
+                    <div class="footer__terms-rights">© CloudFlex 2024. All Rights Reserved.</div>
                 </div>
 
                 <address class="footer__contacts">
@@ -329,3 +367,5 @@
         </div>
     </footer>
 </body>
+
+</html>
